<resources>
    <string name="app_name">运维助手</string>
    <string name="emptyData">暂无数据</string>
    <string name="login">登录</string>
    <string name="logout">退出登录</string>
    <string name="pre_loginNo">账号：</string>
    <string name="pre_loginPwd">密码：</string>
    <string name="inputLoginName">请输入登录账号</string>
    <string name="inputLoginPassword">请输入密码</string>
    <string name="inputIdCardNumber">请输入身份证号</string>
    <string name="uploadGoodsImage">请上传商品图片</string>
    <string name="inputRightPrice">请输入正确的金额</string>
    <string name="inputRightNumber">请输入正确的数字</string>
    <string name="moneyUnit">元</string>
    <string name="formatString_shopName">店铺：%1$s</string>
    <string name="formatString_limitNum4EveryDay">每日库存：%1$s\n每人每日限购：%2$s</string>
    <string name="formatString_addedPrice">加价：%1$s元</string>
    <string name="formatString_showTime">展示时间：%1$s</string>
    <string name="formatString_shopInfo">店铺名称：%1$s\n联系人：%2$s\n联系电话：%3$s\n店铺地址：%4$s</string>
    <string name="formatString_categoryInfo">所属分类：%1$s</string>
    <string name="formatString_aroundShops">周边店铺：%1$s</string>
    <string name="formatString_weightInfo">排序权重：%1$s</string>
    <string name="formatString_rejectInfo">驳回原因：%1$s</string>
    <string name="formatString_deleteInfo">是否将【%1$s】删除？</string>
    <string name="formatString_takePoints">取餐点：%1$s</string>
    <string name="formatString_bindDeliveryMan">绑定骑手：%1$s</string>
    <string name="formatString_deleteDelivery">确定删除配送地址：【%1$s】？删除后不可恢复！</string>
    <string name="formatString_deleteBetterTime">确定删除优选菜展示时间：【%1$s-%2$s】？删除后不可恢复！</string>
    <string name="formatString_deleteCityTime">确定删除城市时间：【%1$s-%2$s】？删除后不可恢复！</string>
    <string name="formatString_seckillTime">确定删除秒杀时间：【%1$s-%2$s】？删除后不可恢复！</string>
    <string name="formatString_deleteSupplyPool">确定删除供给池：【%1$s】？删除后不可恢复！</string>
    <string name="formatString_deleteDeliveryMan">确定删除骑手：【%1$s】？删除后不可恢复！</string>
    <string name="formatString_deleteNotice">删除该【%1$s】消息公告，对应配送地址此公告信息将下架，确认后生效</string>
    <string name="formatString_deleteGroupPrice">删除该【%1$s】团体奖励，对应配送地址奖励信息将被清空，确认后生效</string>
    <string name="formatString_deleteCityTask">删除【%1$s】对应任务，确认后生效</string>
    <string name="formatString_close2Date">停用至：%1$s</string>
    <string name="formatString_closeDeliveryAddressConfirm">确定要停用：【%1$s】吗？</string>
    <string name="formatString_takeNumber">取餐码#%1$s</string>
    <string name="formatString_customerInfo">%1$s ：%2$s\n地址：%3$s</string>
    <string name="formatString_orderListShopInfo">%1$s ：%2$s\n地址：%3$s</string>
    <string name="formatString_openDeliveryAddressConfirm">确定现在要启用：【%1$s】吗？</string>
    <string name="formatString_nameAndPhone">%1$s\n电话：%2$s</string>
    <string name="formatString_currentCityTaskProgress">订单数:%1$s \t 交易额:%2$s</string>
    <string name="formatString_noticeShowTimes">%1$s 至 %2$s</string>
    <string name="formatString_groupPrizeManageList">%1$s、下单满%2$s人,奖励【%3$s】一份</string>
    <string name="formatString_setCityDeliveryPrice">配送费：首个用户【%1$s】元，非首个用户【%2$s】元\n包邮价：【%3$s】元\n确认后生效</string>
    <string name="formatString_goodsPriceInfo">%1$s x %2$s</string>
    <string name="formatString_goodsTotalInfo">总份数：%1$s份\n总金额：%2$s元</string>
    <string name="formatString_orderNo">订单号：%1$s</string>
    <string name="formatString_refundOrderListTotalInfo">总配送费：%1$s元 | 商品总价：%2$s元</string>
    <string name="formatString_refundInfo">取餐码：%1$s,共计%2$s件商品, 合计%3$s元？确认全部退款吗！</string>
    <string name="formatString_orderCount">订单数：%1$s</string>
    <string name="formatString_target">目标：%1$s</string>
    <string name="formatString_dealMoney">交易额：%1$s</string>
    <string name="mine">我的</string>
    <string name="formatString_checkNewVersion">检查新版本（当前版本：%1$s）</string>
    <string name="formatString_userName">%1$s（%2$s）</string>
    <string name="formatString_roleName">当前角色：%1$s</string>
    <string name="formatString_city">所在城市：%1$s</string>
    <string name="home">首页</string>
    <string name="statistics">统计</string>
    <string name="tpcManage">头牌菜管理</string>
    <string name="tpcGoodsDetail">头牌菜详情</string>
    <string name="filter">筛选</string>
    <string name="setFilterInfo">设置筛选条件</string>
    <string name="firstDiscount">首单特惠</string>
    <string name="limitedTimeDiscount">限时秒杀</string>
    <string name="agree">通过</string>
    <string name="reject">驳回</string>
    <string name="edit">编辑</string>
    <string name="agreeAndAddPrice">加价通过</string>
    <string name="modifyAddPrice">修改加价</string>
    <string name="setLabel">设置标签</string>
    <string name="modifySort">修改权重</string>
    <string name="setClass">设置分类</string>
    <string name="setSuperior">设置优选</string>
    <string name="delete">删除</string>
    <string name="cancel">取消</string>
    <string name="deleteQuery">删除确认</string>
    <string name="goodsMainImages">商品头图</string>
    <string name="goodsDetailImages">商品详情图</string>
    <string name="deliveryAddress">配送地址</string>
    <string name="shopInfo">店铺信息</string>
    <string name="inputAddPriceNumber">请输入加价金额</string>
    <string name="modifySortInfo">修改权重(请输入1~100的整数)</string>
    <string name="inputRejectReason">请输入驳回原因</string>
    <string name="optionOk">操作成功</string>
    <string name="goodsName">商品名称</string>
    <string name="goodsRemark">商品描述</string>
    <string name="originalPrice">原价</string>
    <string name="supplyPrice">供应价</string>
    <string name="addPrice">加价</string>
    <string name="realPay">用户实付</string>
    <string name="everyDayLimited">每日库存</string>
    <string name="everyOneEveryDayLimited">每人/日限购</string>
    <string name="send2Activity">发布到活动</string>
    <string name="save">保存</string>
    <string name="setFiner">设置优选</string>
    <string name="alreadySelected">已选：</string>
    <string name="selectHomeCategory">选择首页分类</string>
    <string name="selectDetailCategory">选择商品详情页分类</string>
    <string name="printerManager">打印机管理</string>
    <string name="printDeliveryOrder">打印配送单</string>
    <string name="all">全部</string>
    <string name="selectAll">全选</string>
    <string name="print">打印</string>
    <string name="selectDeliveryAddress">选择配送地址</string>
    <string name="selectFloor">请选择楼层</string>
    <string name="floor">层</string>
    <string name="printDeliveryDialogTitle">确定打印以下配送地址的小票信息吗？</string>
    <string name="printDeliveryFloorsDialogTitle">确定打印该配送地址以下楼层的小票信息吗？</string>
    <string name="deliveryAddressManage">配送地址管理</string>
    <string name="openAddressAlready">已启用</string>
    <string name="closeAddressAlready">已关闭</string>
    <string name="openAddress">启用</string>
    <string name="closeAddress">关闭</string>
    <string name="send2home">送餐上楼</string>
    <string name="takeSelf">用户自取</string>
    <string name="stop2Date">停用至：</string>
    <string name="addNew">新建</string>
    <string name="sendMode">配送模式</string>
    <string name="deliveryAddressName">配送地址名称</string>
    <string name="hint_inputDeliveryAddressName">请输入单个配送地址名称，不可输入多个集合</string>
    <string name="selectPointsOnMap">地图选点</string>
    <string name="detailAddress">具体地址</string>
    <string name="hint_inputDetailAddress">请务必输入详细地址，此处为打印项。例：人民路120号环普大厦A座</string>
    <string name="takePoints">取餐点</string>
    <string name="takePointName">取餐点名称</string>
    <string name="addTakePoints">新建取餐点</string>
    <string name="aroundShops">周边商家</string>
    <string name="deliveryPrice">配送费</string>
    <string name="firstCustomer">首个用户</string>
    <string name="notFirstCustomer">非首个用户</string>
    <string name="noDeliveryMoneyPrice">包邮价</string>
    <string name="onceLimitedPrice">单人起购价</string>
    <string name="offWorkTime">下班时间</string>
    <string name="inputPriceNumber">请输入金额</string>
    <string name="hint_inputTakePointName">例：一楼大厅/服务台/圣熙大厦南，限制15个字</string>
    <string name="notSelectPointsOnMap">还未在地图选点</string>
    <string name="inputNamePlease">请输入名称</string>
    <string name="inputPersonNamePlease">请输入姓名</string>
    <string name="selectShops">选择店铺</string>
    <string name="selectShopsPlease">请选择店铺</string>
    <string name="hint_inputShopName">请输入商家名称/编号ID</string>
    <string name="setOffWorkTime">设置下班时间</string>
    <string name="splitHoursAndMinutes"> : </string>
    <string name="addNewDeliveryAddress">新建配送地址</string>
    <string name="editDeliveryAddress">编辑配送地址</string>
    <string name="inputDeliverAddressNamePlease">请输入配送地址名称</string>
    <string name="inputFirstCustomerDeliveryPricePlease">请输入首个用户配送费</string>
    <string name="inputNotFirstCustomerDeliveryPricePlease">请输入非首个用户配送费</string>
    <string name="inputNoDeliveryPricePlease">请输入包邮费</string>
    <string name="inputDetailAddressPlease">请输入详细地址</string>
    <string name="addTakePointsPlease">请添加取餐点</string>
    <string name="selectDeliveryAddressPositionPlease">请在地图上选择配送地址位置</string>
    <string name="freeDeliveryPriceCantSaveInfo">单人起购价必须小于等于包邮价</string>
    <string name="supplyPoolManage">供给池管理</string>
    <string name="search">搜索</string>
    <string name="manager">负责人</string>
    <string name="shopsInPool">池内店铺</string>
    <string name="drawFence">绘制围栏</string>
    <string name="clearFence">清空围栏</string>
    <string name="mapPosition">地图定位</string>
    <string name="supplyPoolName">供给池名称</string>
    <string name="inputSupplyPoolNamePlease">请输入供给池名称</string>
    <string name="inputSupplyPoolPositionPlease">请输入供给池名称</string>
    <string name="addNewSupplyPool">新建供给池</string>
    <string name="drawFenceInfo">点击地图选点进行绘制围栏</string>
    <string name="drawFenceNotEnoughInfo">至少需要在地图上绘制3点</string>
    <string name="cantGetPositionInfo">暂无法定位到该地点，请重新搜索地图定位</string>
    <string name="cityManage">城市管理</string>
    <string name="taskManage">任务管理</string>
    <string name="bannerManage">Banner管理</string>
    <string name="noticeManage">消息公告管理</string>
    <string name="groupPrizeManage">团体奖励管理</string>
    <string name="cityDeliverPriceManage">城市配送费管理</string>
    <string name="betterGoodsTimeManage">优选菜时间管理</string>
    <string name="cityTimeManage">城市时间管理</string>
    <string name="seckillTimeManage">秒杀时间管理</string>
    <string name="city">城市</string>
    <string name="member">成员</string>
    <string name="targetOrderNumber">目标订单数</string>
    <string name="targetOrderMoney">目标交易额</string>
    <string name="currentProgress">当前进度</string>
    <string name="selectTime">选择时间</string>
    <string name="addNewCityTask">新建城市任务</string>
    <string name="editCityTask">编辑城市任务</string>
    <string name="selectCityPlease">请选择城市</string>
    <string name="groupPrize">团体奖励</string>
    <string name="addNewGroupPrize">新建团体奖励</string>
    <string name="prizeName">奖励名称</string>
    <string name="prizeRules">奖励规则（当日）</string>
    <string name="prizeDescription">奖励描述</string>
    <string name="prizeImage">奖励图片</string>
    <string name="prizeRulesPart1Info">下单人数满</string>
    <string name="prizeRulesPart2Info">人</string>
    <string name="hint_inputMax200">最多输入200个字</string>
    <string name="useNotInputAddress">使用非录入的地址</string>
    <string name="useNotInputAddressInfo">使用配送范围内非运维录入的地址，即包含所有用户定位的位置地址集合</string>
    <string name="personName">姓名</string>
    <string name="callPhone">联系电话</string>
    <string name="inputPhonePlease">请输入联系电话</string>
    <string name="addNewDeliveryMan">新增骑手</string>
    <string name="account">账号</string>
    <string name="hint_accountInputInfo">请输入6–10 数字+字母</string>
    <string name="refundedAlready">已退</string>
    <string name="orderNo">订单编号</string>
    <string name="orderMergedNo">合并单订单号</string>
    <string name="orderCustomer">下单用户</string>
    <string name="arrivedTime">送达时间</string>
    <string name="goodsInfo">商品信息</string>
    <string name="deliveryManInfo">骑手信息</string>
    <string name="orderCreateTime">下单时间</string>
    <string name="refundInfo">退款信息</string>
    <string name="total">合计</string>
    <string name="reason">原因</string>
    <string name="responsibleParty">责任方</string>
    <string name="refundGoods">退款商品</string>
    <string name="refundTime">退款时间</string>
    <string name="refund">退款</string>
    <string name="refundPart">部分退款</string>
</resources>