<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/general_item_padding_min"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?android:attr/selectableItemBackground"
    app:cardCornerRadius="@dimen/common_radius"
    app:cardElevation="@dimen/general_item_padding_min">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/general_item_padding">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/mTakeNumberTextView"
                style="@style/general_textStyle_blackMax2"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/mRefundedFlagTextView"
                style="@style/general_textStyle_blackMax1"
                android:text="@string/refundedAlready"
                android:textStyle="bold"
                android:visibility="gone" />

        </LinearLayout>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/general_item_margin">

            <TableRow>

                <TextView
                    style="@style/general_textStyle_grayDefaultSize"
                    android:text="@string/orderNo" />

                <TextView
                    android:id="@+id/mOrderNoTextView"
                    style="@style/general_textStyle_blackDefaultSize"
                    android:layout_width="0dp"
                    android:layout_weight="1" />
            </TableRow>


            <TableRow android:layout_marginTop="@dimen/general_item_margin_min">

                <TextView
                    style="@style/general_textStyle_grayDefaultSize"
                    android:text="@string/orderMergedNo" />

                <TextView
                    android:id="@+id/mMergedNoTextView"
                    style="@style/general_textStyle_blackDefaultSize"
                    android:layout_width="0dp"
                    android:layout_weight="1" />
            </TableRow>

            <TableRow android:layout_marginTop="@dimen/general_item_margin_min">

                <TextView
                    style="@style/general_textStyle_grayDefaultSize"
                    android:text="@string/orderCustomer" />

                <TextView
                    android:id="@+id/mCustomerInfoTextView"
                    style="@style/general_textStyle_blackDefaultSize"
                    android:layout_width="0dp"
                    android:layout_weight="1" />
            </TableRow>

            <TableRow android:layout_marginTop="@dimen/general_item_margin_min">

                <TextView
                    style="@style/general_textStyle_grayDefaultSize"
                    android:text="@string/arrivedTime" />

                <TextView
                    android:id="@+id/mArrivedTimeTextView"
                    style="@style/general_textStyle_blackDefaultSize"
                    android:layout_width="0dp"
                    android:layout_weight="1" />
            </TableRow>

            <TableRow android:layout_marginTop="@dimen/general_item_margin_min">

                <TextView
                    style="@style/general_textStyle_grayDefaultSize"
                    android:text="@string/goodsInfo" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/mGoodsRecyclerView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />
            </TableRow>

            <TableRow android:layout_marginTop="@dimen/general_item_margin_min">

                <TextView
                    style="@style/general_textStyle_grayDefaultSize"
                    android:text="@string/total" />

                <TextView
                    android:id="@+id/mTotalTextView"
                    style="@style/general_textStyle_blackDefaultSize"
                    android:layout_width="0dp"
                    android:layout_weight="1" />
            </TableRow>

            <TableRow android:layout_marginTop="@dimen/general_item_margin_min">

                <TextView
                    style="@style/general_textStyle_grayDefaultSize"
                    android:text="@string/shopInfo" />

                <TextView
                    android:id="@+id/mShopInfoTextView"
                    style="@style/general_textStyle_blackDefaultSize"
                    android:layout_width="0dp"
                    android:layout_weight="1" />
            </TableRow>

            <TableRow android:layout_marginTop="@dimen/general_item_margin_min">

                <TextView
                    style="@style/general_textStyle_grayDefaultSize"
                    android:text="@string/deliveryManInfo" />

                <TextView
                    android:id="@+id/mDeliveryManInfoTextView"
                    style="@style/general_textStyle_blackDefaultSize"
                    android:layout_width="0dp"
                    android:layout_weight="1" />
            </TableRow>

            <TableRow android:layout_marginTop="@dimen/general_item_margin_min">

                <TextView
                    style="@style/general_textStyle_grayDefaultSize"
                    android:text="@string/orderCreateTime" />

                <TextView
                    android:id="@+id/mOrderCreateTimeTextView"
                    style="@style/general_textStyle_blackDefaultSize"
                    android:layout_width="0dp"
                    android:layout_weight="1" />
            </TableRow>

            <TableLayout
                android:id="@+id/mRefundInfoRootView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/general_textStyle_grayMax2"
                    android:layout_marginTop="@dimen/general_item_margin"
                    android:text="@string/refundInfo" />

                <TableRow android:layout_marginTop="@dimen/general_item_margin_min">

                    <TextView
                        style="@style/general_textStyle_grayDefaultSize"
                        android:text="@string/reason" />

                    <TextView
                        android:id="@+id/mReasonTextView"
                        style="@style/general_textStyle_blackDefaultSize"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:textColor="@color/text_red" />
                </TableRow>

                <TableRow android:layout_marginTop="@dimen/general_item_margin_min">

                    <TextView
                        style="@style/general_textStyle_grayDefaultSize"
                        android:text="@string/responsibleParty" />

                    <TextView
                        android:id="@+id/mResponsiblePartyTextView"
                        style="@style/general_textStyle_blackDefaultSize"
                        android:layout_width="0dp"
                        android:layout_weight="1" />
                </TableRow>

                <TableRow android:layout_marginTop="@dimen/general_item_margin_min">

                    <TextView
                        style="@style/general_textStyle_grayDefaultSize"
                        android:text="@string/refundGoods" />

                    <TextView
                        android:id="@+id/mRefundGoodsPartyTextView"
                        style="@style/general_textStyle_blackDefaultSize"
                        android:layout_width="0dp"
                        android:layout_weight="1" />
                </TableRow>

                <TableRow android:layout_marginTop="@dimen/general_item_margin_min">

                    <TextView
                        style="@style/general_textStyle_grayDefaultSize"
                        android:text="@string/refundTime" />

                    <TextView
                        android:id="@+id/mRefundTimeTextView"
                        style="@style/general_textStyle_blackDefaultSize"
                        android:layout_width="0dp"
                        android:layout_weight="1" />
                </TableRow>
            </TableLayout>
        </TableLayout>

        <LinearLayout
            android:id="@+id/mOptionButtonRootView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/general_item_margin_min"
            android:gravity="right"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/mRefundTextView"
                style="@style/general_buttonMinRed"
                android:layout_marginLeft="@dimen/general_item_margin"
                android:text="@string/refund" />

            <TextView
                android:id="@+id/mRefundPartTextView"
                style="@style/general_buttonMinRed"
                android:layout_marginLeft="@dimen/general_item_margin"
                android:text="@string/refundPart" />
        </LinearLayout>


    </LinearLayout>
</android.support.v7.widget.CardView>